// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCard change an active tab 1`] = `
<div
  class="card-container large"
>
  <div
    class="card"
  >
    <header
      class="card__header"
    >
      <div
        class="card__headertext"
      >
        <h2
          class="card__title"
        >
          
        </h2>
         
        <span
          class="card__published"
        >
          Oppdatert 01.09.2018
        </span>
      </div>
       
      <nav
        class="card__nav"
      >
        <div
          class="tabs"
          role="tablist"
        >
          <button
            aria-label="Status"
            aria-selected="[object Object]"
            class="tabs__tab"
            id="tabButton-0"
            role="tab"
          >
            Status
          </button>
          <button
            aria-label="Matrise"
            aria-selected="[object Object]"
            class="tabs__tab active"
            id="tabButton-1"
            role="tab"
          >
            Matrise
          </button>
          <button
            aria-label="Historisk"
            aria-selected="[object Object]"
            class="tabs__tab"
            id="tabButton-2"
            role="tab"
          >
            Historisk
          </button>
           
          <div
            class="card__toggle-menu"
          >
            <button
              class="card__toggle-button card__toggle-button--active"
            >
              <i
                aria-hidden="true"
                class="material-icons context-menu__dropdown-item-icon"
              >
                bar_chart
              </i>
            </button>
             
            <button
              class="card__toggle-button"
            >
              <i
                aria-hidden="true"
                class="material-icons context-menu__dropdown-item-icon"
              >
                table_chart
              </i>
            </button>
             
            <button
              class="card__toggle-button"
            >
              <i
                aria-hidden="true"
                class="material-icons context-menu__dropdown-item-icon"
              >
                map
              </i>
            </button>
          </div>
        </div>
         
        <div
          class="context-menu"
          role="menu"
        >
          <button
            aria-haspopup="true"
            aria-label="Åpne meny"
            class="context-menu__button"
            id="context-menu-button"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              menu
            </i>
             
            <span>
              Valg
            </span>
          </button>
           
          <!---->
        </div>
      </nav>
    </header>
     
    <div
      class="graph__shadow"
      role="tabpanel"
    >
      <div
        aria-hidden="true"
        class="graph__container"
      >
        <div
          class="spinner"
        >
          <img
            alt=""
            src="../assets/spinner.svg"
          />
        </div>
         
        <!---->
         
        <svg
          aria-hidden="true"
          class="graph__svg loading"
        />
      </div>
       
      <div
        class="graph__tablecontainer visually-hidden"
      >
        <table>
          <caption />
           
          <thead />
           
          <tbody />
        </table>
      </div>
       
      <div
        class="resize-observer"
        data-v-b329ee4c=""
        tabindex="-1"
      >
        <object
          aria-hidden="true"
          data="about:blank"
          tabindex="-1"
          type="text/html"
        />
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`GraphCard renders correctly 1`] = `
<div
  class="card-container large"
>
  <div
    class="card"
  >
    <header
      class="card__header"
    >
      <div
        class="card__headertext"
      >
        <h2
          class="card__title"
        >
          
        </h2>
         
        <span
          class="card__published"
        >
          Oppdatert 01.09.2018
        </span>
      </div>
       
      <nav
        class="card__nav"
      >
        <div
          class="tabs"
          role="tablist"
        >
          <button
            aria-label="Antall"
            aria-selected="[object Object]"
            class="tabs__tab active"
            id="tabButton-0"
            role="tab"
          >
            Antall
          </button>
          <button
            aria-label="Andel"
            aria-selected="[object Object]"
            class="tabs__tab"
            id="tabButton-1"
            role="tab"
          >
            Andel
          </button>
           
          <div
            class="card__toggle-menu"
          >
            <button
              class="card__toggle-button card__toggle-button--active"
            >
              <i
                aria-hidden="true"
                class="material-icons context-menu__dropdown-item-icon"
              >
                bar_chart
              </i>
            </button>
             
            <button
              class="card__toggle-button"
            >
              <i
                aria-hidden="true"
                class="material-icons context-menu__dropdown-item-icon"
              >
                table_chart
              </i>
            </button>
             
            <button
              class="card__toggle-button"
            >
              <i
                aria-hidden="true"
                class="material-icons context-menu__dropdown-item-icon"
              >
                map
              </i>
            </button>
          </div>
        </div>
         
        <div
          class="context-menu"
          role="menu"
        >
          <button
            aria-haspopup="true"
            aria-label="Åpne meny"
            class="context-menu__button"
            id="context-menu-button"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              menu
            </i>
             
            <span>
              Valg
            </span>
          </button>
           
          <!---->
        </div>
      </nav>
    </header>
     
    <div
      class="graph__shadow"
      role="tabpanel"
    >
      <div
        aria-hidden="true"
        class="graph__container"
      >
        <div
          class="spinner"
        >
          <img
            alt=""
            src="../assets/spinner.svg"
          />
        </div>
         
        <!---->
         
        <svg
          aria-hidden="true"
          class="graph__svg loading"
        />
      </div>
       
      <div
        class="graph__tablecontainer visually-hidden"
      >
        <table>
          <caption />
           
          <thead />
           
          <tbody />
        </table>
      </div>
       
      <div
        class="resize-observer"
        data-v-b329ee4c=""
        tabindex="-1"
      >
        <object
          aria-hidden="true"
          data="about:blank"
          tabindex="-1"
          type="text/html"
        />
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;
